--- a/build.settings
+++ b/build.settings
@@ -29,5 +29,6 @@ settings =
     {
 		"android.permission.INTERNET",
 		"android.permission.VIBRATE",
+		"android.permission.READ_PHONE_STATE",
     },
 }
